# cssrankings-scrape-qa

./: .rtx.toml  README.md  pyproject.toml
csr/: __main__.py  urls.txt
