[tool.poetry]
name = "cssrankings"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Scrapy = "^2.9.0"
pandas = "^2.0.3"
openai = "^0.27.8"
ipykernel = "^6.24.0"
ipywidgets = "^8.0.7"
ipython = "^8.14.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
